Fixes issue where italic was bleeding through into other entries on the tag archive page. Adds a dark mode style for h1 on tag archive page.

--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -218,3 +218,11 @@
 		}
 	}
 }
+em {
+	.footer-navigation-menu {	
+		font-style: normal;
+	}
+	.footer-tagline {
+		font-style: normal;
+	}
+}
